# ExpAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  Taskfile.yml  project.yml  pyproject.toml  skills-lock.json
.claude/skills/backlog/: SKILL.md
.claude/skills/backlog/references/: commands.md
.claude/skills/competition-setup/: SKILL.md
.claude/skills/experiment-workflow/: SKILL.md
.claude/skills/experiment-workflow/references/: directory-settings.md  tabular-feature-engineering.md  validation-strategy.md
.claude/skills/kaggle-competition-setup/: SKILL.md
.claude/skills/kaggle-submission-flow/: SKILL.md
.claude/skills/playwright-cli/: SKILL.md
.claude/skills/wandb-primary/: SKILL.md
.claude/skills/wandb-primary/references/: WANDB_SDK.md
.claude/skills/wandb-primary/scripts/: wandb_helpers.py  weave_helpers.py
docker/: Dockerfile  cloudbuild.yaml  entrypoint.sh
scripts/: setup_kaggle_json.sh
src/: new.py
src/kaggle_ops/: compile.py  download.py  new.py  upload.py  vertex.py  write.py
src/kaggle_ops/scripts/: download_competition.py  smoke_test.py
src/kaggle_ops/utils/: customhub.py  utils.py
templates/models/: README.md  inference.py  settings.py  train.py
templates/models/submission/: kernel-metadata.template.json
terraform/: .gitignore  README.md
terraform/environments/dev/: backend.tf  main.tf  variables.tf
terraform/modules/artifact-registry/: main.tf  outputs.tf  variables.tf
tests/: test_new.py
tests/kaggle_ops/: test_new.py
